MH-4177 -- Cleanup on encoding profiles, flavors and workflows
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7477 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/encoding/matterhorn-movies.properties
+++ b/docs/felix/conf/encoding/matterhorn-movies.properties
@@ -48,17 +48,9 @@ profile.video-only.http.mimetype = #{in.video.mimetype}
 profile.video-only.http.ffmpeg.command = -i #{in.video.path} -vcodec copy -an #{out.dir}/#{out.name}#{out.suffix}
 
 # Format definition for mjpeg movies used by the video segmenter (matterhorn-vsegmenter)
-profile.mjpeg.http.name = motion jpeg
-profile.mjpeg.http.input = visual
-profile.mjpeg.http.output = visual
-profile.mjpeg.http.suffix = -mjpeg.mov
-profile.mjpeg.http.mimetype = video/x-motion-jpeg
-profile.mjpeg.http.ffmpeg.command = -i #{in.video.path} -deinterlace -r 1 -vcodec mjpeg -qscale 1 -s 320x240 -an #{out.dir}/#{out.name}#{out.suffix}
-
-# Still images
-profile.image.http.name = still image
-profile.image.http.input = visual
-profile.image.http.output = image
-profile.image.http.suffix = .#{time}.jpg
-profile.image.http.mimetype = image/jpeg
-profile.image.http.ffmpeg.command = -y -i #{in.video.path} -r 1 -ss #{time} -vframes 1 -f image2 #{out.dir}/#{out.name}#{out.suffix}
+profile.video-segmentation.http.name = motion jpeg
+profile.video-segmentation.http.input = visual
+profile.video-segmentation.http.output = visual
+profile.video-segmentation.http.suffix = -mjpeg.mov
+profile.video-segmentation.http.mimetype = video/x-motion-jpeg
+profile.video-segmentation.http.ffmpeg.command = -i #{in.video.path} -deinterlace -r 1 -vcodec mjpeg -qscale 1 -s 320x240 -an #{out.dir}/#{out.name}#{out.suffix}
