MH-4177 -- Adjusted feed registrations to updated encoding profiles and flavors
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7479 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/feeds/aggregation.properties
+++ b/docs/felix/conf/feeds/aggregation.properties
@@ -10,5 +10,7 @@ feed.copyright=All rights reserved by The Opencast Project
 feed.home=/engage/ui
 feed.entry=/engage/ui/embed.html?id={0}
 feed.cover=/engage/feed-cover.png
+feed.rssflavor=presenter/delivery
 feed.rsstags=rss
+feed.atomflavors=presenter/delivery,presentation/delivery
 feed.atomtags=atom
