--- a/docs/felix/conf/feeds/custom.properties
+++ b/docs/felix/conf/feeds/custom.properties
@@ -10,5 +10,7 @@ feed.copyright=All rights reserved by The Opencast Project
 feed.home=/engage/ui
 feed.entry=/engage/ui/embed.html?id={0}
 feed.cover=/engage/feed-cover.png
+feed.rssflavor=presenter/delivery
 feed.rsstags=rss
+feed.atomflavors=presenter/delivery,presentation/delivery
 feed.atomtags=atom
