--- a/docs/felix/conf/feeds/series.properties
+++ b/docs/felix/conf/feeds/series.properties
@@ -9,7 +9,7 @@ feed.copyright=All rights reserved by The Opencast Project
 feed.home=/engage/ui
 feed.entry=/engage/ui/embed.html?id={0}
 feed.cover=/engage/feed-cover.png
-feed.rssflavor=engage/rss
-feed.atomflavors=engage/atom
+feed.rssflavor=presenter/delivery
 feed.rsstags=rss
+feed.atomflavors=presenter/delivery,presentation/delivery
 feed.atomtags=atom
