--- a/modules/matterhorn-scheduler-impl/pom.xml
+++ b/modules/matterhorn-scheduler-impl/pom.xml
@@ -17,6 +17,11 @@
       <artifactId>matterhorn-scheduler-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
+     <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-series-service-api</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>   
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-dublincore</artifactId>
@@ -119,7 +124,14 @@
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
       <scope>test</scope>
-    </dependency>           
+    </dependency>  
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-series-service-impl</artifactId>
+      <version>0.9-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency> 
+             
   </dependencies>
   <build>
     <plugins>
