MH-4212 Updated pom.xml files to reflect correct version
git-svn-id: http://opencast.jira.com/svn/MH/tags/1.0.7520@7522 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-mpeg7/pom.xml
+++ b/modules/matterhorn-mpeg7/pom.xml
@@ -5,17 +5,17 @@
   <artifactId>matterhorn-mpeg7</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-mpeg7</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <dependencies>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-metadata-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
