--- a/modules/matterhorn-analysis-rest/pom.xml
+++ b/modules/matterhorn-analysis-rest/pom.xml
@@ -5,11 +5,11 @@
   <artifactId>matterhorn-analysis-rest</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-analysis-rest</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <dependencies>
   
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-analysis-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
 
     <!--  Thirdparty dependencies -->
