--- a/modules/matterhorn-build-tools/pom.xml
+++ b/modules/matterhorn-build-tools/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opencastproject</groupId>
   <artifactId>matterhorn-build-tools</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
   <name>matterhorn-build-tools</name>
   <properties>
