--- a/modules/matterhorn-dictionary-impl/pom.xml
+++ b/modules/matterhorn-dictionary-impl/pom.xml
@@ -5,11 +5,11 @@
 	<artifactId>matterhorn-dictionary-impl</artifactId>
 	<packaging>bundle</packaging>
 	<name>matterhorn-dictionary-impl</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<parent>
 		<groupId>org.opencastproject</groupId>
 		<artifactId>base</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 	<dependencies>
 
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.opencastproject</groupId>
 			<artifactId>matterhorn-dictionary-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 
 		<!--  Thirdparty dependencies -->
