--- a/modules/matterhorn-distribution-service-common/pom.xml
+++ b/modules/matterhorn-distribution-service-common/pom.xml
@@ -23,17 +23,17 @@
   
   <packaging>jar</packaging>
   <name>matterhorn-distribution-service-common</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <dependencies>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-distribution-service-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workspace-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -156,7 +156,7 @@
           <dependency>
             <groupId>org.opencastproject</groupId>
             <artifactId>matterhorn-build-tools</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>compile</scope>
           </dependency>
         </dependencies>
