--- a/modules/matterhorn-scheduler-impl/pom.xml
+++ b/modules/matterhorn-scheduler-impl/pom.xml
@@ -5,27 +5,27 @@
   <artifactId>matterhorn-scheduler-impl</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-scheduler-impl</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <dependencies>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-scheduler-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
      <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-series-service-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>   
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-dublincore</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>    
     <dependency>
       <groupId>commons-io</groupId>
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-series-service-impl</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
       <scope>test</scope>
     </dependency> 
              
