--- a/modules/matterhorn-webconsole/pom.xml
+++ b/modules/matterhorn-webconsole/pom.xml
@@ -5,17 +5,17 @@
   <artifactId>matterhorn-webconsole</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-webconsole</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <dependencies>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
