--- a/modules/matterhorn-workspace-api/pom.xml
+++ b/modules/matterhorn-workspace-api/pom.xml
@@ -5,11 +5,11 @@
   <artifactId>matterhorn-workspace-api</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-workspace-api</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <build>
     <plugins>
