MH-4259 -- fixed pom dependencies for conductor
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7536 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/pom.xml
+++ b/modules/matterhorn-conductor/pom.xml
@@ -12,28 +12,6 @@
   </parent>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-      <version>2.5.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymockclassextension</artifactId>
-      <version>2.5.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workflow-service-api</artifactId>
       <version>0.9-SNAPSHOT</version>
@@ -60,11 +38,6 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-search-service-impl</artifactId>
-      <version>0.9-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-distribution-service-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
@@ -75,13 +48,40 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-analysis-videosegmenter</artifactId>
+      <artifactId>matterhorn-analysis-api</artifactId>
       <version>0.9-SNAPSHOT</version>
-    </dependency>
+    </dependency>    
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-analysis-text</artifactId>
+      <artifactId>matterhorn-dublincore</artifactId>
       <version>0.9-SNAPSHOT</version>
+    </dependency>    
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-mpeg7</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>    
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>2.5.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymockclassextension</artifactId>
+      <version>2.5.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
