--- a/modules/matterhorn-working-file-repository-service-api/pom.xml
+++ b/modules/matterhorn-working-file-repository-service-api/pom.xml
@@ -12,6 +12,11 @@
     <version>0.9-SNAPSHOT</version>
   </parent>
   <dependencies>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-kernel</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
