--- a/modules/matterhorn-workspace-api/pom.xml
+++ b/modules/matterhorn-workspace-api/pom.xml
@@ -11,6 +11,13 @@
     <artifactId>base</artifactId>
     <version>0.9-SNAPSHOT</version>
   </parent>
+  <dependencies>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-kernel</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
