MH-3680, Scheduler server updates. Refactored xml, removed namespace qualification.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7592 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-scheduler-impl/pom.xml
+++ b/modules/matterhorn-scheduler-impl/pom.xml
@@ -131,7 +131,11 @@
       <version>0.9-SNAPSHOT</version>
       <scope>test</scope>
     </dependency> 
-             
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -150,10 +154,12 @@
               *;resolution:=optional
             </Import-Package>
             <Private-Package>
-              net.fortuna.ical4j.*
+              net.fortuna.ical4j.*,
+              org.json.*
             </Private-Package>
             <Embed-Dependency>
               ical4j;inline=true
+              json_simple;inline=true
             </Embed-Dependency>
             <Service-Component>
               OSGI-INF/scheduler-service.xml,
