MH-3617 -- changed dictionary service impl to store the words in a relational DB via JPA, and split the artifact installer into its own component.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7594 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-dictionary-impl/pom.xml
+++ b/modules/matterhorn-dictionary-impl/pom.xml
@@ -100,6 +100,41 @@
 			<scope>test</scope>
 		</dependency>
 
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>javax.persistence</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.jpa</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.asm</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.antlr</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <scope>test</scope>
+    </dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -115,8 +150,10 @@
 							org.opencastproject.dictionary
             </Export-Package>
 						<Service-Component>
-							OSGI-INF/dictionary-service.xml
+							OSGI-INF/dictionary-service.xml,
+              OSGI-INF/dictionary-scanner.xml
             </Service-Component>
+            <JPA-PersistenceUnits>org.opencastproject.dictionary</JPA-PersistenceUnits>
 					</instructions>
 				</configuration>
 			</plugin>
