--- a/modules/matterhorn-analysis-text/pom.xml
+++ b/modules/matterhorn-analysis-text/pom.xml
@@ -29,6 +29,12 @@
 
     <dependency>
       <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-dictionary-api</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-remote-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
