MH-4318 -- Service remoting now happens automagically, therefore there's no need to have separate configuration files anymore.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7701 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/config.properties
+++ b/docs/felix/conf/config.properties
@@ -252,9 +252,6 @@ org.opencastproject.capture.ingest.endpoint.url=${org.opencastproject.server.url
 #composer.ffmpegpath = /usr/local/bin/ffmpeg
 composer.threads = 1
 
-# INGEST
-#remote.ingest = http://localhost:8081
-
 # INSPECTION
 # Class to use for analyzing media (default: org.opencastproject.inspection.impl.MediaInfoAnalyzer)
 #inspection.analyzerclass = org.opencastproject.inspection.impl.MediaInfoAnalyzer
@@ -263,7 +260,7 @@ composer.threads = 1
 
 # SEARCH
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
-#search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
+#search.searchindexdir = ${org.opencastproject.storage.dir}/searchindex
 
 # VIDEO SEGMENTATION
 videosegmenter.threads = 1
@@ -280,18 +277,9 @@ org.opencastproject.file.repo.path=${org.opencastproject.storage.dir}/files
 # Workspace working files repository (recommend using transient storage)
 org.opencastproject.workspace.rootdir = ${org.opencastproject.storage.dir}/workspace
 # Delete any files in the workspace older than n seconds. Use -1 to turn off garbage collection.
-org.opencastproject.workspace.gc.max.age=21600
+org.opencastproject.workspace.gc.max.age = 21600
 # Check for old files in the workspace every n seconds
-org.opencastproject.workspace.gc.period=60
+org.opencastproject.workspace.gc.period = 60
 
 # WORKFLOW
 org.opencastproject.workflow.default.definition = full
-
-# INBOX
-# The path to the directory which will be scanned as the inbox. This should never be the same dir, as the Working File Repository!
-org.opencastproject.inbox.path = ${org.opencastproject.storage.dir}/inbox
-# Time in seconds after which a file should be expected to be uploaded if its size did not increase.
-org.opencastproject.inbox.refresh = 30
-# Time in seconds how often the inbox dir should be checked for new files.
-org.opencastproject.inbox.directory.refresh = 10
-
