MH-4181 -- added a rest endpoint displaying the registered remote services along with their running and queued job counts.  Set the default security on this endpoint to be admin only, since it shouldn't be anybody else's business.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7703 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-remote-impl/pom.xml
+++ b/modules/matterhorn-remote-impl/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>commons-io</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
@@ -107,9 +112,11 @@
               org.opencastproject.remote.impl,
               org.opencastproject.remote.command
             </Export-Package>
+            <Embed-Dependency>json-simple;inline=true</Embed-Dependency>
             <Service-Component>
               OSGI-INF/receipt.xml,
-              OSGI-INF/maintenance_shell.xml
+              OSGI-INF/maintenance_shell.xml,
+              OSGI-INF/remote-service-endpoint.xml
             </Service-Component>
             <JPA-PersistenceUnits>org.opencastproject.remote</JPA-PersistenceUnits>
           </instructions>
