MH-4304 Merged 7688 with branch - setup now uses 3rd party install script
git-svn-id: http://opencast.jira.com/svn/MH/branches/1.0.x@7728 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -1155,13 +1155,13 @@
   -->
   <distributionManagement>
     <snapshotRepository>
-      <id>matterhorn-maven2-snapshot</id>
+      <id>nexus</id>
       <name>OC Snapshot repo</name>
-      <url>http://repository.opencastproject.org/nexus/content/repositories/snapshots</url>
+      <url>http://repository.opencastproject.org/nexus/content/repositories/testocrelease</url>
       <uniqueVersion>false</uniqueVersion>
     </snapshotRepository>
     <repository>
-      <id>matterhorn-maven2-release</id>
+      <id>nexus</id>
       <name>OC Release repo</name>
       <url>http://repository.opencastproject.org/nexus/content/repositories/releases</url>
     </repository>
