MH-4306 -- Fixed encoding pofiles to work with presentation audio only tracks.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7741 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/encoding/engage-movies.properties
+++ b/docs/felix/conf/encoding/engage-movies.properties
@@ -36,7 +36,7 @@ profile.flash.http.ffmpeg.command = -i #{in.video.path} -r 25 -vcodec flv -b 800
 # Distribution format definition for 4 by 3 flash presenter/presentation download
 profile.flash-vga.http.name = flash download
 profile.flash-vga.http.input = stream
-profile.flash-vga.http.output = visual
+profile.flash-vga.http.output = audiovisual
 profile.flash-vga.http.suffix = -10fps.flv
 profile.flash-vga.http.mimetype = video/x-flv
 profile.flash-vga.http.ffmpeg.command = -i #{in.video.path} -r 25 -vcodec flv -b 800000 -qscale 3.5 -deinterlace -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
