--- a/docs/felix/conf/encoding/engage-movies.properties
+++ b/docs/felix/conf/encoding/engage-movies.properties
@@ -47,4 +47,4 @@ profile.flash-preview.http.input = stream
 profile.flash-preview.http.output = audiovisual
 profile.flash-preview.http.suffix = -15fps-preview.flv
 profile.flash-preview.http.mimetype = video/x-flv
-profile.flash.http.ffmpeg.command = -i #{in.video.path} -r 15 -vcodec flv -b 1000 -qscale 3.5 -ar 22050 #{out.dir}/#{out.name}#{out.suffix}
+profile.flash-preview.http.ffmpeg.command = -i #{in.video.path} -r 15 -vcodec flv -b 1000 -qscale 3.5 -ar 22050 #{out.dir}/#{out.name}#{out.suffix}
