MH-4306 Merged with 1.0.x branch
git-svn-id: http://opencast.jira.com/svn/MH/branches/1.0.x@7801 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/encoding/engage-movies.properties
+++ b/docs/felix/conf/encoding/engage-movies.properties
@@ -38,7 +38,7 @@ profile.flash.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{ou
 # Distribution format definition for 4 by 3 flash presenter/presentation download
 profile.flash-vga.http.name = flash download
 profile.flash-vga.http.input = stream
-profile.flash-vga.http.output = visual
+profile.flash-vga.http.output = audiovisual
 profile.flash-vga.http.suffix = -10fps.flv
 profile.flash-vga.http.mimetype = video/x-flv
 profile.flash-vga.http.ffmpeg.command.video = -i #{in.video.path} -y -r 10 -vcodec flv -b 800000 -qscale 3.5 -ar 44100
