MH-4505 -- fixed the pom to include the slf4j dependency
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7824 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-remote-api/pom.xml
+++ b/modules/matterhorn-remote-api/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>commons-collections</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.servicemix.specs</groupId>
       <artifactId>org.apache.servicemix.specs.jaxb-api-2.1</artifactId>
     </dependency>
