MH-4524 Updated pom.xml files to reflect correct version
git-svn-id: http://opencast.jira.com/svn/MH/tags/1.0.7846@7848 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-capture-agent-impl/pom.xml
+++ b/modules/matterhorn-capture-agent-impl/pom.xml
@@ -5,34 +5,34 @@
   <artifactId>matterhorn-capture-agent-impl</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-capture-agent-impl</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-capture-agent-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-capture-admin-service-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-static</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
       <type>bundle</type>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject.samples</groupId>
