MH-4525 -- fixed a variety of bugs, some related to the remote services refactor, others not.  Also started on MH-4492, but stopped because our current APIs do not deliver context information to the services that create receipts.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7877 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
         <module>modules/matterhorn-metadata-api</module>
         <module>modules/matterhorn-mpeg7</module>
         <module>modules/matterhorn-runtime-info-ui</module>
+        <module>modules/matterhorn-remote-api</module>
+        <module>modules/matterhorn-remote-impl</module>
         <module>modules/matterhorn-security-impl</module>
         <module>modules/matterhorn-static</module>
         <module>modules/matterhorn-webconsole</module>
@@ -95,6 +97,8 @@
         <module>modules/matterhorn-kernel</module>
         <module>modules/matterhorn-metadata-api</module>
         <module>modules/matterhorn-mpeg7</module>
+        <module>modules/matterhorn-remote-api</module>
+        <module>modules/matterhorn-remote-impl</module>
         <module>modules/matterhorn-runtime-info-ui</module>
         <module>modules/matterhorn-security-impl</module>
         <module>modules/matterhorn-webconsole</module>
@@ -119,6 +123,8 @@
         <module>modules/matterhorn-search-service-api</module>
         <module>modules/matterhorn-search-service-feeds</module>
         <module>modules/matterhorn-search-service-impl</module>
+        <module>modules/matterhorn-remote-api</module>
+        <module>modules/matterhorn-remote-impl</module>
         <module>modules/matterhorn-security-impl</module>
         <module>modules/matterhorn-webconsole</module>
       </modules>
@@ -143,6 +149,8 @@
         <module>modules/matterhorn-runtime-info-ui</module>
         <module>modules/matterhorn-search-service-api</module>
         <module>modules/matterhorn-search-service-remote</module>
+        <module>modules/matterhorn-remote-api</module>
+        <module>modules/matterhorn-remote-impl</module>
         <module>modules/matterhorn-security-impl</module>
         <module>modules/matterhorn-webconsole</module>
       </modules>
