MH-4407 updating tests, updating test profile
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7885 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/pom.xml
+++ b/modules/matterhorn-engage-player/pom.xml
@@ -109,7 +109,9 @@
 		</plugins>
 	</build>
 
-	<!-- mvn -P uitests test, run JsTestDriver + FlexUnit  -->
+	<!-- mvn -P uitests test, run JsTestDriver javascript browser tests + FlexUnit test in FlashPlayer 
+	example: mvn -P uitests test -DflashPlayer.command=/Users/ket/dev/debugger/FlashPlayerDebugger.app/Contents/MacOS/FlashPlayerDebugger
+	 -->
 	<profiles>
 		<profile>
 			<id>uitests</id>
