MH-4407 changing directories
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7892 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/pom.xml
+++ b/modules/matterhorn-engage-player/pom.xml
@@ -47,7 +47,7 @@
 		(Only files needed for the matterhorn-engage-ui module)
 	-->
 	<build>
-		<sourceDirectory>src/main/flex/Videodisplay</sourceDirectory>
+		<sourceDirectory>src/main/flex</sourceDirectory>
 		<!--<testSourceDirectory>src/test/flex</testSourceDirectory>-->
 		<plugins>
 			<plugin>
